mod leveltest img size (500px > 70%)

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </div>
         </div>
         <div style="text-align: center;">
-          <a href="#"><img src="assets/images/logo/lets_korea_logo_3128_783.png" alt="" class="img-fluid" style="max-width: 500px;"></a>
+          <a href="#"><img src="assets/images/logo/lets_korea_logo_3128_783.png" alt="" class="img-fluid" style="max-width: 70%;"></a>
         </div>
     </div>
 </section>
