add course pages

--- a/course-detail-form.html
+++ b/course-detail-form.html
@@ -99,55 +99,52 @@
                   <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                         <div class="single-course-details ">
-    <h4 class="course-title">Description</h4>
-    <p>RED (Korean Alphabet) is the course through which learners can read and write every Korean sound.</p>
+                            <h4 class="course-title">Description</h4>
+                            <p>RED (Korean Alphabet) is the course through which learners can read and write every Korean sound.</p>
 
-    <p>Lorem ipsum dolor sit amet . The graphic and typographic operators know this well, in reality all the professions dealing with the universe of communication have a stable relationship with these words, but what is it? Lorem ipsum is a dummy text without any sense.</p>
-
-
-    <div class="course-widget course-info">
-        <h4 class="course-title">What You will Learn?</h4>
-        <ul>
-            <li>
-                <i class="fa fa-check"></i>
-                Lorem ipsum dolor sit amet . 
-            </li>
-            <li>
-                <i class="fa fa-check"></i>
-                The graphic and typographic operators know this well, 
-            </li>
-            <li>
-                <i class="fa fa-check"></i>
-                in reality all the professions dealing with the universe of communication have a stable relationship
-            </li>
-            <li>
-                <i class="fa fa-check"></i>
-                with these words, but what is it? 
-            </li>
-            <li>
-                <i class="fa fa-check"></i>
-                Lorem ipsum is a dummy text without any sense.
-            </li>
-            <li>
-                <i class="fa fa-check"></i>
-                It is a sequence of Latin words that, 
-            </li>
-        </ul>
-    </div>
-</div>
+                            <div class="course-widget course-info">
+                                <h4 class="course-title">What You will Learn?</h4>
+                                <ul>
+                                    <li>
+                                        <i class="fa fa-check"></i>
+                                        RED (Korean Alphabet) is the course through which learners can read and write every Korean sound.
+                                    </li>
+                                    <li>
+                                        <i class="fa fa-check"></i>
+                                        The graphic and typographic operators know this well, 
+                                    </li>
+                                    <li>
+                                        <i class="fa fa-check"></i>
+                                        in reality all the professions dealing with the universe of communication have a stable relationship
+                                    </li>
+                                    <li>
+                                        <i class="fa fa-check"></i>
+                                        with these words, but what is it? 
+                                    </li>
+                                    <li>
+                                        <i class="fa fa-check"></i>
+                                        Lorem ipsum is a dummy text without any sense.
+                                    </li>
+                                    <li>
+                                        <i class="fa fa-check"></i>
+                                        It is a sequence of Latin words that, 
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="tab-pane fade" id="nav-topics" role="tabpanel" aria-labelledby="nav-topics-tab">
                         <!--  Course Topics -->
-<div class="single-course-segment  course-topics-wrap">
-    <div class="course-topics-header d-lg-flex justify-content-between">
-        <div class="course-topics-header-left">
-            <h4 class="course-title">Topics for this course</h4>
-        </div>
-        <div class="course-topics-header-right">
-            <span> Total learning: <strong>14 Lessons</strong></span>
-        </div>
-    </div>
+                      <div class="single-course-segment  course-topics-wrap">
+                          <div class="course-topics-header d-lg-flex justify-content-between">
+                              <div class="course-topics-header-left">
+                                  <h4 class="course-title">Topics for this course</h4>
+                              </div>
+                              <div class="course-topics-header-right">
+                                  <span> Total learning: <strong>14 Lessons</strong></span>
+                              </div>
+                          </div>
 
                <div class="course-curriculum " >
                 <div class="curriculum-scrollable">
