--- a/index.html
+++ b/index.html
@@ -41,12 +41,6 @@
                 <!-- <img src="assets/images/logo/lets_korea_logo_3128_783.png" alt="" class="img-fluid"> -->
             </a>
 
-            <!-- Toggler -->
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="fa fa-bars"></span>
-            </button>
-
             <!-- Collapse -->
             <div class="collapse navbar-collapse" id="navbarMenu">
                 <ul class="navbar-nav ml-auto">
@@ -55,27 +49,18 @@
                             COURSES<i class="fa fa-angle-down"></i>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbar3">
-                            <a class="dropdown-item " href="#">
-                                COURSE 1
+                            <a class="dropdown-item " href="regular-courses.html">
+                                HANGUL DREAM
                             </a>
-                            <a class="dropdown-item " href="#">
-                                COURSE 2
+                            <a class="dropdown-item " href="topic.html">
+                                TOPIC
                             </a> 
-                            <a class="dropdown-item " href="#">
-                                COURSE 3
+                            <a class="dropdown-item " href="zoom-class.html">
+                                ZOOM CLASS
                             </a> 
-                            <a class="dropdown-item " href="#">
-                                COURSE 4
-                            </a> 
-                            <a class="dropdown-item " href="#">
-                                COURSE 5
-                            </a> 
-                            <a class="dropdown-item " href="#">
-                                COURSE 6
-                            </a> 
-                             <a class="dropdown-item " href="#">
-                                COURSE 7 <!-- <span>New</span> -->
-                            </a> 
+                            <a class="dropdown-item " href="fun-korea.html">
+                                FUN KOREA <!-- <span>New</span> -->
+                            </a>
                         </div>
                     </li>
                     <li class="nav-item ">
@@ -180,26 +165,26 @@
         <div class="row">               
             <div class="col-lg-6 col-md-6">
                 <div class="blog-item" style="padding-left: 100px;">
-                    <a href="course-detail.html"><img src="assets/images/course/course-thumb.jpg" alt="" class="img-fluid"></a>
+                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
                 </div>
             </div>
 
             <div class="col-lg-6 col-md-6">
                 <div class="blog-item" style="padding-right: 100px;">
-                    <a href="course-detail.html"><img src="assets/images/course/course-thumb.jpg" alt="" class="img-fluid"></a>
+                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
                 </div>
             </div>
         </div>
         <div class="row" style="padding-top: 50px;">               
             <div class="col-lg-6 col-md-6">
                 <div class="blog-item" style="padding-left: 100px;">
-                    <a href="course-detail.html"><img src="assets/images/course/course-thumb.jpg" alt="" class="img-fluid"></a>
+                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
                 </div>
             </div>
 
             <div class="col-lg-6 col-md-6">
                 <div class="blog-item" style="padding-right: 100px;">
-                    <a href="course-detail.html"><img src="assets/images/course/course-thumb.jpg" alt="" class="img-fluid"></a>
+                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
                 </div>
             </div>
         </div>
@@ -207,7 +192,7 @@
 </section>
 
 
-<!-- MIDDLE BANNER -->
+<!-- FREE LEVEL TEST -->
 <section class="about-section about-2 middle-banner">
     <a href="#">
         <img src="assets/images/banner/banner-leveltest.png" alt="FREE LEVEL TEST">
@@ -258,13 +243,13 @@
         <div class="row">               
             <div class="col-lg-6 col-md-6">
                 <div class="blog-item" style="padding-left: 100px;">
-                    <a href="course-detail.html"><img src="assets/images/course/course-thumb.jpg" alt="" class="img-fluid"></a>
+                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
                 </div>
             </div>
 
             <div class="col-lg-6 col-md-6">
                 <div class="blog-item" style="padding-right: 100px;">
-                    <a href="course-detail.html"><img src="assets/images/course/course-thumb.jpg" alt="" class="img-fluid"></a>
+                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
                 </div>
             </div>
         </div>
@@ -428,7 +413,7 @@
                                                 <div class="course-lessons">
                                                     <div class="single-course-lesson">
                                                         <div class="course-topic-lesson">
-                                                            <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+                                                            <span>FAQ 1</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -447,7 +432,7 @@
                                                 <div class="course-lessons">
                                                     <div class="single-course-lesson">
                                                         <div class="course-topic-lesson">                              
-                                                            <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+                                                            <span>FAQ 2</span>
                                                         </div>                                                        
                                                     </div>
                                                 </div>
@@ -467,7 +452,7 @@
                                                 <div class="course-lessons">
                                                     <div class="single-course-lesson">
                                                         <div class="course-topic-lesson">
-                                                            <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+                                                            <span>FAQ 3</span>
                                                         </div>
                                                     </div>
                                                 </div>
