--- a/course-detail-red.html
+++ b/course-detail-red.html
@@ -364,7 +364,7 @@
                         <li>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span><i class="bi bi-user-ID"></i>Instructor :</span>
-                                <a href="#" class="d-inline-block">Severus Snape</a>
+                                Severus Snape
                             </div>
                         </li>
 
