--- a/regular-courses.html
+++ b/regular-courses.html
@@ -62,7 +62,7 @@
 </section>
 
 <!-- MENU BAR -->
-<div class="main_menu menu-style-8 bg-darkblue" id="mainmenu-area" style="color: #fff;">
+<div class="main_menu menu-style-8 bg-darkblue nav-tp" id="mainmenu-area" style="color: #fff;">
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
@@ -80,26 +80,10 @@
                             <a class="dropdown-item " href="regular-courses.html">
                                 HANGUL DREAM
                             </a>
-                            <a class="dropdown-item " href="topic.html">
-                                TOPIC
+                            <a class="dropdown-item " href="zoom-package.html">
+                                ZOOM PACKAGE
                             </a> 
-                            <a class="dropdown-item " href="zoom-class.html">
-                                ZOOM CLASS
-                            </a> 
-                            <a class="dropdown-item " href="fun-korea.html">
-                                FUN KOREA 
-                            </a>
                         </div>
-                    </li>
-                    <li class="nav-item ">
-                        <a href="premium.html" class="nav-link js-scroll-trigger">
-                            PREMIUM
-                        </a>
-                    </li>
-                    <li class="nav-item ">
-                        <a href="payment.html" class="nav-link js-scroll-trigger">
-                            PAYMENT
-                        </a>
                     </li>
                     <li class="nav-item ">
                         <a href="notice.html" class="nav-link js-scroll-trigger">
@@ -117,41 +101,16 @@
                         </a>
                     </li>
                 </ul>
-
+<!-- 
                 <ul class="header-contact-right d-none d-lg-block">
-                    
                     <li><a href="login-registration.html" class="header-search"> <i class="fa fa-user mr-2"></i></a></li>
                 </ul>
-               
+ -->               
             </div> <!-- / .navbar-collapse -->
         </div> <!-- / .container -->
     </nav>
 </div>
 
-<!-- REGULAR COURSES -->
-<section class="about-section section-padding about-2" style="padding-bottom: 0px;">
-    <div class="container">
-        <div class="row">               
-            <div class="col-lg-4 col-md-6">
-                <div class="blog-item">
-                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="blog-item">
-                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="blog-item">
-                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
 <!-- RAINBOW COURSES -->
 <section class="section-padding">
@@ -195,7 +154,7 @@
             </div>
             <div class="col-lg-6 col-md-12">
                 <div class="course-content">
-                    <h3 style="padding-bottom: 10px;"><a href="course-detail-orange.html" class="h3-a-orange-course">ORANGE COUSE</a></h3>
+                    <h3 style="padding-bottom: 10px;"><a href="course-detail-orange.html" class="h3-a-orange-course">ORANGE COURSE</a></h3>
                     <a href="course-detail-orange.html">
                         <p class="rainbow-course-description"><b>TEACHER LEEYEHOON<br>TOTAL 9 VIDEOS</b></p>
                         <p>ORANGE (Beginner 1) is the most basic grammar and vocabulary course necessary for daily life.</p>
