--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <!-- <img src="assets/images/logo/lets_korea_logo_3128_783.png" alt="" class="img-fluid"> -->
+                <img src="assets/images/logo/lets_korea_logo_3128_783.png" alt="" class="img-fluid">
             </a>
 
             <!-- Collapse -->
@@ -52,25 +52,17 @@
                             <a class="dropdown-item " href="regular-courses.html">
                                 HANGUL DREAM
                             </a>
-                            <a class="dropdown-item " href="topic.html">
-                                TOPIC
+                            <a class="dropdown-item " href="zoom-package.html">
+                                TOPIK
                             </a> 
-                            <a class="dropdown-item " href="zoom-class.html">
-                                ZOOM CLASS
+                            <a class="dropdown-item " href="zoom-package.html">
+                                FUN KOREAN <!-- <span>New</span> -->
                             </a> 
-                            <a class="dropdown-item " href="fun-korea.html">
-                                FUN KOREA <!-- <span>New</span> -->
-                            </a>
                         </div>
                     </li>
                     <li class="nav-item ">
-                        <a href="premium.html" class="nav-link js-scroll-trigger">
-                            PREMIUM
-                        </a>
-                    </li>
-                    <li class="nav-item ">
-                        <a href="payment.html" class="nav-link js-scroll-trigger">
-                            PAYMENT
+                        <a href="notice.html" class="nav-link js-scroll-trigger">
+                            PACKAGE
                         </a>
                     </li>
                     <li class="nav-item ">
