--- a/index.html
+++ b/index.html
@@ -157,26 +157,26 @@
         <div class="row">               
             <div class="col-lg-6 col-md-6">
                 <div class="blog-item" style="padding-left: 100px;">
-                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
+                    <a href="course-detail.html"><img src="assets/images/course/rainbowCourses/1.red-course.png" alt="" class="img-fluid"></a>
                 </div>
             </div>
 
             <div class="col-lg-6 col-md-6">
                 <div class="blog-item" style="padding-right: 100px;">
-                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
+                    <a href="course-detail.html"><img src="assets/images/course/rainbowCourses/2.orange-course.png" alt="" class="img-fluid"></a>
                 </div>
             </div>
         </div>
         <div class="row" style="padding-top: 50px;">               
             <div class="col-lg-6 col-md-6">
                 <div class="blog-item" style="padding-left: 100px;">
-                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
+                    <a href="course-detail.html"><img src="assets/images/course/rainbowCourses/3.yellow-course.png" alt="" class="img-fluid"></a>
                 </div>
             </div>
 
             <div class="col-lg-6 col-md-6">
                 <div class="blog-item" style="padding-right: 100px;">
-                    <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
+                    <a href="course-detail.html"><img src="assets/images/course/rainbowCourses/4.green-course.png" alt="" class="img-fluid"></a>
                 </div>
             </div>
         </div>
@@ -244,6 +244,17 @@
                     <a href="course-detail.html"><img src="assets/images/course/sample/course-thumb.jpg" alt="" class="img-fluid"></a>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- ??? -->
+<section class="section-padding">
+    <div class="container">
+        <div class="about-img">
+           <img src="assets/images/banner/fun-korean-1.png" alt="" class="img-fluid">
+           <img src="assets/images/banner/fun-korean-2.png" alt="" class="img-fluid">
         </div>
     </div>
 </section>
