--- a/regular-courses.html
+++ b/regular-courses.html
@@ -136,7 +136,7 @@
                 <div class="course-content">
                     <h3 style="padding-bottom: 10px;"><a href="course-detail-red.html" class="h3-a-red-course">RED COURSE</a></h3>
                     <a href="course-detail-red.html">
-                        <p class="rainbow-course-description"><b>TEACHER LEEYEHOON<br>TOTAL 9 VIDEOS</b></p>
+                        <p class="rainbow-course-description"><b>TEACHER: Yunghyun, Yu <br>TOTAL 9 VIDEOS</b></p>
                         <p>RED (Korean Alphabet) is the course through which learners can read and write every Korean sound.</p>
                     </a>
                 </div>
@@ -156,7 +156,7 @@
                 <div class="course-content">
                     <h3 style="padding-bottom: 10px;"><a href="course-detail-orange.html" class="h3-a-orange-course">ORANGE COURSE</a></h3>
                     <a href="course-detail-orange.html">
-                        <p class="rainbow-course-description"><b>TEACHER LEEYEHOON<br>TOTAL 9 VIDEOS</b></p>
+                        <p class="rainbow-course-description"><b>TEACHER: Siwon, Ha <br>TOTAL 9 VIDEOS</b></p>
                         <p>ORANGE (Beginner 1) is the most basic grammar and vocabulary course necessary for daily life.</p>
                     </a>
                 </div>
@@ -176,7 +176,7 @@
                 <div class="course-content">
                     <h3 style="padding-bottom: 10px;"><a href="course-detail-yellow.html" class="h3-a-yellow-course">YELLOW COURSE</a></h3>
                     <a href="course-detail-yellow.html">
-                        <p class="rainbow-course-description"><b>TEACHER LEEYEHOON<br>TOTAL 9 VIDEOS</b></p>
+                        <p class="rainbow-course-description"><b>TEACHER: Siwon, Ha <br>TOTAL 9 VIDEOS</b></p>
                         <p>YELLOW (Beginner 2) deals with more systematic Korean words and grammar, such as self-introduction, school life, weekend activities, etc.</p>
                     </a>
                 </div>
@@ -196,7 +196,7 @@
                 <div class="course-content">
                     <h3 style="padding-bottom: 10px;"><a href="course-detail-green.html" class="h3-a-green-course">GREEN COURSE</a></h3>
                     <a href="course-detail-green.html">
-                        <p class="rainbow-course-description"><b>TEACHER LEEYEHOON<br>TOTAL 9 VIDEOS</b></p>
+                        <p class="rainbow-course-description"><b>TEACHER: Miri, Im <br>TOTAL 9 VIDEOS</b></p>
                         <p>GREEN (Intermediate 1) provides practical expressions and grammar. You can speak natural Korean in your daily life.</p>
                     </a>
                 </div>
