--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
 
 
 <!-- FREE LEVEL TEST -->
-<section class="about-section about-2 middle-banner">
+<section class="about-section about-2 middle-banner bg-pstblue">
     <a href="#">
-        <img src="assets/images/banner/banner-leveltest.png" alt="FREE LEVEL TEST">
+        <img src="assets/images/banner/banner-levelTest-11.png" alt="FREE LEVEL TEST">
     </a>
 </section>
 
