add package, lecture detail, update index link

--- a/course-detail-yellow.html
+++ b/course-detail-yellow.html
@@ -102,7 +102,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-8">
           <div class="page-header-content">
-            <h1>Red Course</h1>
+            <h1>Yellow Course</h1>
             <ul class="list-inline mb-0">
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
@@ -121,8 +121,8 @@
             <div class="col-lg-8">
 
                 <div class="course-single-header">
-                    <h3 class="single-course-title">Red Course - Korean Alphabet</h3> 
-                    <p>RED (Korean Alphabet) is the course through which learners can read and write every Korean sound.</p>  
+                    <h3 class="single-course-title">Yellow - BEGINNER 2</h3>                
+                    <p>YELLOW (Beginner 2) deals with more systematic Korean words and grammar, such as self-introduction, school life, weekend activities, etc.</p>  
                 </div>
                 <!-- DESCRIPT TAB -->
                 <!-- <nav class="course-single-tabs">
@@ -182,9 +182,6 @@
                               <div class="course-topics-header-left">
                                   <h4 class="course-title">Topics for this course</h4>
                               </div>
-                              <div class="course-topics-header-right">
-                                  <span> Total learning: <strong> 9 Lessons</strong></span>
-                              </div>
                           </div>
 
                <div class="course-curriculum " >
@@ -193,14 +190,14 @@
                       <li class="section">
                         <div class="section-header">
                           <div class="section-left">
-                            <h5 class="section-title">RED KOREAN ALPHABET</h5>
+                            <h5 class="section-title">YELLOW - BEGINNER 2</h5>
                           </div>
                         </div>
 
                         <ul class="section-content">
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">1. CONSONANT 1</span>
+                              <span class="item-name">1. Grammar_(으) 탈락</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -209,7 +206,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">2. CONSONANT 2</span>
+                              <span class="item-name">2. Grammar_(ㄹ) 불규칙</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -218,7 +215,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">3. CONSONANT 3</span>
+                              <span class="item-name">3. Grammar_(ㄷ) 불규칙</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -227,7 +224,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">4. CONSONANT 4</span>
+                              <span class="item-name">4. Grammar_(ㅂ) 불규칙</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -236,7 +233,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">5. CONSONANT 5</span>
+                              <span class="item-name">5. Grammar_(ㅅ) 불규칙</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -245,7 +242,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">6. CONSONANT 6</span>
+                              <span class="item-name">6. Grammar_(으)세요</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -254,25 +251,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">7. VOWELS 1</span>
-                              <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
-                                <i class="item-meta course-item-status"></i>
-                              </div>
-                            </a>
-                          </li>
-                          <li class="course-item has-status course-item-lp_lesson">
-                            <a class="section-item-link" href="#">
-                              <span class="item-name">8. VOWELS 2</span>
-                              <div class="course-item-meta">
-                                <span class="item-meta duration">10 min</span>
-                                <i class="item-meta course-item-status"></i>
-                              </div>
-                            </a>
-                          </li>
-                          <li class="course-item has-status course-item-lp_lesson">
-                            <a class="section-item-link" href="#">
-                              <span class="item-name">9. VOWELS 3</span>
+                              <span class="item-name">7. Grammar_(이)나, 도, 와/과, 하고, (이)랑</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -284,7 +263,7 @@
                     </ul>
                   </div>
                 </div>
-        </div>
+              </div>
 <!--  Course Topics End -->
 
         </div>
@@ -294,7 +273,7 @@
         <div class="col-lg-4">
                 <div class="course-sidebar">
                   <div class="course-single-thumb">
-                      <img src="assets/images/course/rainbowCourses/1.red-course.png" alt="red course" class="img-fluid w-100">
+                      <img src="assets/images/course/rainbowCourses/3.yellow-course.png" alt="orange course" class="img-fluid w-100">
                       <div class="course-price-wrapper">
                           <div class="course-price ml-3">
                             <h4>Price: <span>$ 99</span></h4></div>
@@ -314,13 +293,13 @@
                         <li>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span><i class="bi bi-graph-bar"></i>Skill level : </span>
-                                Alphabet level
+                                Begginer 2
                             </div>
                         </li>
                         <li>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span><i class="bi bi-user-ID"></i>Instructor :</span>
-                                Yunghyun, Yu
+                                Siwon, Ha 
                             </div>
                         </li>
 
@@ -333,13 +312,13 @@
                         <li>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span><i class="bi bi-paper"></i>Lessons :</span>
-                                9
+                                7
                             </div>
                         </li>
                         <li>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span><i class="bi bi-group"></i>Learners :</span>
-                                201
+                                156
                             </div>
                         </li>  
                     </ul>
@@ -362,18 +341,18 @@
         <div class="row">
             <div class="col-lg-4 col-md-6">
                 <div class="blog-item">
-                    <a href="course-detail-orange.html"><img src="assets/images/course/rainbowCourses/2.orange-course.png" alt="" class="img-fluid"></a>
+                    <a href="course-detail-red.html"><img src="assets/images/course/rainbowCourses/1.red-course.png" alt="" class="img-fluid"></a>
                     <div class="blog-content">
-                        <h2 class="font-size-24" style="text-align: center;"><a href="#">ORANGE - BEGINNER 1</a></h2>
+                        <h2 class="font-size-24" style="text-align: center;"><a href="#">RED COURSE - KOREAN ALPHABET</a></h2>
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
                 <div class="blog-item">
-                    <a href="course-detail-yellow.html"><img src="assets/images/course/rainbowCourses/3.yellow-course.png" alt="" class="img-fluid"></a>
+                    <a href="course-detail-orange.html"><img src="assets/images/course/rainbowCourses/2.orange-course.png" alt="" class="img-fluid"></a>
                     <div class="blog-content">
-                        <h2 class="font-size-24" style="text-align: center;"><a href="#">YELLOW - BEGINNER 2</a></h2>
+                        <h2 class="font-size-24" style="text-align: center;"><a href="#">ORANGE - BEGINNER 1</a></h2>
                     </div>
                 </div>
             </div>
