--- a/regular-courses.html
+++ b/regular-courses.html
@@ -52,10 +52,18 @@
                             <a class="dropdown-item " href="regular-courses.html">
                                 HANGUL DREAM
                             </a>
-                            <a class="dropdown-item " href="zoom-package.html">
-                                ZOOM PACKAGE
+                            <a class="dropdown-item " href="topik.html">
+                                TOPIK
+                            </a> 
+                            <a class="dropdown-item " href="fun-korean.html">
+                                FUN KOREAN
                             </a> 
                         </div>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="package.html" class="nav-link js-scroll-trigger">
+                            PACKAGE
+                        </a>
                     </li>
                     <li class="nav-item ">
                         <a href="notice.html" class="nav-link js-scroll-trigger">
@@ -112,8 +120,10 @@
 </section>
 
 
+
 <!-- RAINBOW COURSES -->
 <section class="section-padding">
+
     <div class="container">
         <div class="about-img" style="text-align: center; padding: 50px 0px 50px;">
            <img src="assets/images/course/rainbowCourses/rainbow-courses.png" alt="" class="img-fluid">
@@ -156,7 +166,7 @@
                 <div class="course-content">
                     <h3 style="padding-bottom: 10px;"><a href="course-detail-orange.html" class="h3-a-orange-course">ORANGE COURSE</a></h3>
                     <a href="course-detail-orange.html">
-                        <p class="rainbow-course-description"><b>TEACHER: Siwon, Ha <br>TOTAL 9 VIDEOS</b></p>
+                        <p class="rainbow-course-description"><b>TEACHER: Siwon, Ha <br>TOTAL 5 VIDEOS</b></p>
                         <p>ORANGE (Beginner 1) is the most basic grammar and vocabulary course necessary for daily life.</p>
                     </a>
                 </div>
@@ -176,7 +186,7 @@
                 <div class="course-content">
                     <h3 style="padding-bottom: 10px;"><a href="course-detail-yellow.html" class="h3-a-yellow-course">YELLOW COURSE</a></h3>
                     <a href="course-detail-yellow.html">
-                        <p class="rainbow-course-description"><b>TEACHER: Siwon, Ha <br>TOTAL 9 VIDEOS</b></p>
+                        <p class="rainbow-course-description"><b>TEACHER: Siwon, Ha <br>TOTAL 7 VIDEOS</b></p>
                         <p>YELLOW (Beginner 2) deals with more systematic Korean words and grammar, such as self-introduction, school life, weekend activities, etc.</p>
                     </a>
                 </div>
@@ -196,7 +206,7 @@
                 <div class="course-content">
                     <h3 style="padding-bottom: 10px;"><a href="course-detail-green.html" class="h3-a-green-course">GREEN COURSE</a></h3>
                     <a href="course-detail-green.html">
-                        <p class="rainbow-course-description"><b>TEACHER: Miri, Im <br>TOTAL 9 VIDEOS</b></p>
+                        <p class="rainbow-course-description"><b>TEACHER: Miri, Im <br>TOTAL 24 VIDEOS</b></p>
                         <p>GREEN (Intermediate 1) provides practical expressions and grammar. You can speak natural Korean in your daily life.</p>
                     </a>
                 </div>
