--- a/course-detail-green.html
+++ b/course-detail-green.html
@@ -102,7 +102,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-8">
           <div class="page-header-content">
-            <h1>Red Course</h1>
+            <h1>Green Course</h1>
             <ul class="list-inline mb-0">
               <li class="list-inline-item"></li>
               <li class="list-inline-item">
@@ -121,8 +121,8 @@
             <div class="col-lg-8">
 
                 <div class="course-single-header">
-                    <h3 class="single-course-title">Red Course - Korean Alphabet</h3> 
-                    <p>RED (Korean Alphabet) is the course through which learners can read and write every Korean sound.</p>  
+                    <h3 class="single-course-title">GREEN - INTERMEDIATE 1</h3>                
+                    <p>GREEN (Intermediate 1) provides practical expressions and grammar. You can speak natural Korean in your daily life.</p>  
                 </div>
                 <!-- DESCRIPT TAB -->
                 <!-- <nav class="course-single-tabs">
@@ -182,9 +182,6 @@
                               <div class="course-topics-header-left">
                                   <h4 class="course-title">Topics for this course</h4>
                               </div>
-                              <div class="course-topics-header-right">
-                                  <span> Total learning: <strong> 9 Lessons</strong></span>
-                              </div>
                           </div>
 
                <div class="course-curriculum " >
@@ -193,14 +190,14 @@
                       <li class="section">
                         <div class="section-header">
                           <div class="section-left">
-                            <h5 class="section-title">RED KOREAN ALPHABET</h5>
+                            <h5 class="section-title">GREEN - INTERMEDIATE 1</h5>
                           </div>
                         </div>
 
                         <ul class="section-content">
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">1. CONSONANT 1</span>
+                              <span class="item-name">1. Grammar V-(으)려면</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -209,7 +206,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">2. CONSONANT 2</span>
+                              <span class="item-name">2. Grammar (-으)면 되다/(-으)면 안 되다</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -218,7 +215,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">3. CONSONANT 3</span>
+                              <span class="item-name">3. Grammar V-아/어도</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -227,7 +224,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">4. CONSONANT 4</span>
+                              <span class="item-name">4. Grammar V-고 싶어 하다</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -236,7 +233,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">5. CONSONANT 5</span>
+                              <span class="item-name">5. Grammar -으나</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -245,7 +242,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">6. CONSONANT 6</span>
+                              <span class="item-name">6. Grammar 아/어야</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -254,7 +251,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">7. VOWELS 1</span>
+                              <span class="item-name">7. Grammar 더라고요, 더군요</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -263,7 +260,7 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">8. VOWELS 2</span>
+                              <span class="item-name">8. Grammar 나보다/는가 보다</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -272,7 +269,142 @@
                           </li>
                           <li class="course-item has-status course-item-lp_lesson">
                             <a class="section-item-link" href="#">
-                              <span class="item-name">9. VOWELS 3</span>
+                              <span class="item-name">9. Grammar (으)니까</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">10. Grammar 느라고</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">11. Grammar 자마자</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">12. Grammar 아/어야겠다</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">13. Grammar (으)ㄹ텐데</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">14. Grammar 았었/-었었</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">15. Grammar 거든(요)</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">16. Grammar '는 편이다</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">17. Grammar '기 위해</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">18. Grammar '을 테니</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">19. Grammar '도록</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">20. Grammar '은/는 만큼, 을 만큼</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">21. Grammar '아/어 가다 / 오다, 아/어 가다, 아/어 오다</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">22. Grammar '아/어 가지고</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">23. Grammar '(ㄴ/는)다고 (1탄)</span>
+                              <div class="course-item-meta">
+                                <span class="item-meta duration">10 min</span>
+                                <i class="item-meta course-item-status"></i>
+                              </div>
+                            </a>
+                          </li>
+                          <li class="course-item has-status course-item-lp_lesson">
+                            <a class="section-item-link" href="#">
+                              <span class="item-name">24. Grammar '(ㄴ/는)다고 (2탄)</span>
                               <div class="course-item-meta">
                                 <span class="item-meta duration">10 min</span>
                                 <i class="item-meta course-item-status"></i>
@@ -284,7 +416,7 @@
                     </ul>
                   </div>
                 </div>
-        </div>
+              </div>
 <!--  Course Topics End -->
 
         </div>
@@ -294,7 +426,7 @@
         <div class="col-lg-4">
                 <div class="course-sidebar">
                   <div class="course-single-thumb">
-                      <img src="assets/images/course/rainbowCourses/1.red-course.png" alt="red course" class="img-fluid w-100">
+                      <img src="assets/images/course/rainbowCourses/4.green-course.png" alt="orange course" class="img-fluid w-100">
                       <div class="course-price-wrapper">
                           <div class="course-price ml-3">
                             <h4>Price: <span>$ 99</span></h4></div>
@@ -314,13 +446,13 @@
                         <li>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span><i class="bi bi-graph-bar"></i>Skill level : </span>
-                                Alphabet level
+                                Intermediate 1
                             </div>
                         </li>
                         <li>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span><i class="bi bi-user-ID"></i>Instructor :</span>
-                                Yunghyun, Yu
+                                Miri, Im
                             </div>
                         </li>
 
@@ -333,13 +465,13 @@
                         <li>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span><i class="bi bi-paper"></i>Lessons :</span>
-                                9
+                                24
                             </div>
                         </li>
                         <li>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span><i class="bi bi-group"></i>Learners :</span>
-                                201
+                                245
                             </div>
                         </li>  
                     </ul>
@@ -362,6 +494,15 @@
         <div class="row">
             <div class="col-lg-4 col-md-6">
                 <div class="blog-item">
+                    <a href="course-detail-red.html"><img src="assets/images/course/rainbowCourses/1.red-course.png" alt="" class="img-fluid"></a>
+                    <div class="blog-content">
+                        <h2 class="font-size-24" style="text-align: center;"><a href="#">RED COURSE - KOREAN ALPHABET</a></h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="blog-item">
                     <a href="course-detail-orange.html"><img src="assets/images/course/rainbowCourses/2.orange-course.png" alt="" class="img-fluid"></a>
                     <div class="blog-content">
                         <h2 class="font-size-24" style="text-align: center;"><a href="#">ORANGE - BEGINNER 1</a></h2>
@@ -374,15 +515,6 @@
                     <a href="course-detail-yellow.html"><img src="assets/images/course/rainbowCourses/3.yellow-course.png" alt="" class="img-fluid"></a>
                     <div class="blog-content">
                         <h2 class="font-size-24" style="text-align: center;"><a href="#">YELLOW - BEGINNER 2</a></h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="blog-item">
-                    <a href="course-detail-green.html"><img src="assets/images/course/rainbowCourses/4.green-course.png" alt="" class="img-fluid"></a>
-                    <div class="blog-content">
-                        <h2 class="font-size-24" style="text-align: center;"><a href="#">GREEN - INTERMEDIATE 1</a></h2>
                     </div>
                 </div>
             </div>
